unified_tests/functions/function_parameter_missing_type/expect/build.text.stderr
lib.copp:1:16: error: expected identifier
  function run(x:) -> nil {
                 ^
lib.copp:4:1: error: expected symbol
  
